Fix styling on small screen

--- a/girder_jsonforms/web_client/stylesheets/depositionList.styl
+++ b/girder_jsonforms/web_client/stylesheets/depositionList.styl
@@ -1,7 +1,8 @@
 .g-deposition-list-header
-  margin-bottom 10px
+  padding-bottom 10px
 
   .g-deposition-pagination
+    padding-bottom 10px
     display inline-block
     >ul
       margin 3px 13px 0 0
@@ -14,6 +15,7 @@
   .g-deposition-search-form
     display inline
     margin-right 15px
+    padding-bottom 10px
 
     .form-group
       display inline-block
@@ -40,6 +42,5 @@
       margin-left 0
       border-left none
 
-  .g-deposition-actions
+  .g-depositions-actions
     display inline-block
-    float right
